[package]
name = "kincaid"
description = "A word statistics library in Rust"
version = "0.2.3"
license = "MIT"
authors = ["Pawan Hegde <contact@pawanhegde.com>"]
edition = "2018"
homepage = "https://github.com/PawanHegde/kincaid"
documentation = "https://github.com/PawanHegde/kincaid"
repository = "https://github.com/PawanHegde/kincaid"
keywords = ["english", "flesch-kincaid", "readability", "syllable", "word-count"]
categories = ["text-processing"]
include = [
    "src/**.rs",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
regex="1"
lazy_static="1"
wasm-bindgen = "0.2"
wee_alloc = "0.4"