[package]
name = "kincaid"
description = "A word statistics library in Rust"
version = "0.2.5"
license = "MIT"
authors = ["Pawan Hegde <contact@pawanhegde.com>"]
edition = "2018"
homepage = "https://github.com/PawanHegde/kincaid"
documentation = "https://github.com/PawanHegde/kincaid"
repository = "https://github.com/PawanHegde/kincaid"
keywords = ["english", "flesch-kincaid", "readability", "syllable", "word-count"]
categories = ["text-processing"]
include = [
    "src/**.rs",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lazy_static="1"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.regex]
version = "1.0"
default-features = false
features = ["std", "unicode-case", "unicode-gencat", "unicode-perl", "perf"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
