[package]
name = "kincaid"
description = "A word statistics library in Rust"
version = "0.3.0"
license = "MIT"
authors = ["Pawan Hegde <contact@pawanhegde.com>"]
edition = "2018"
homepage = "https://github.com/PawanHegde/kincaid"
documentation = "https://github.com/PawanHegde/kincaid"
repository = "https://github.com/PawanHegde/kincaid"
keywords = ["english", "flesch-kincaid", "readability", "syllable", "word-count"]
categories = ["text-processing"]
include = [
    "src/**.rs",
]

[lib]
crate-type = ["lib"]

[dependencies.lazy_static]
version = "1.0"

[dependencies.regex]
version = "1.0"
default-features = false
features = ["std", "unicode-case", "unicode-gencat", "unicode-perl", "perf"]
